syntax = "proto3";

package hotel_pb;

message SpawnerStatus {
  // The game ID that this spawner supports.
  // TODO: This could eventually be a list of multiple supported IDs.
  // Required.
  string supported_game_id = 1;

  // The number of running servers managed by this spawner.
  // Required.
  uint32 num_game_servers = 2;

  // The maximum number of servers this spawner can support.
  // Required.
  uint32 max_game_servers = 3;
}
